core/unpackaged/main/default/objects/ZVC__Zoom_Product_Setting__c/ZVC__Zoom_Product_Setting__c.object-meta.xml
<CustomObject>
    <label>Zoom Product Setting</label>
    <nameField>
        <label>Zoom Product Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zoom Product Setting</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>