core/unpackaged/main/default/objects/ZVC__Zoom_Product_Setting__c/fields/ZVC__Authorize_Status__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Authorize_Status__c</fullName>
    <label>Authorize Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Authorized</fullName>
            </value>
            <value>
                <fullName>Authorized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>