core/unpackaged/main/default/objects/ZVC__Zoom_Product_Setting__c/fields/ZVC__Authorized_Time__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Authorized_Time__c</fullName>
    <label>Authorized Time</label>
    <type>DateTime</type>
</CustomField>