core/unpackaged/main/default/objects/ZVC__Zoom_Product_Setting__c/fields/ZVC__Description__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>