core/unpackaged/main/default/objects/ZVC__Zoom_Product_Setting__c/fields/ZVC__Product_Name__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Product_Name__c</fullName>
    <label>Product Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Zoom_Contact_Center</fullName>
            </value>
            <value>
                <fullName>Zoom_Phone</fullName>
            </value>
            <value>
                <fullName>Zoom_Meeting</fullName>
            </value>
            <value>
                <fullName>Zoom_Webinar</fullName>
            </value>
            <value>
                <fullName>Zoom_Events</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>