core/unpackaged/main/default/objects/ZVC__Zoom_Product_Setting__c/fields/ZVC__Status__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Status__c</fullName>
    <description>default
activated
deactivated</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>